--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,8 @@ bitflags = "1.3"
 cfg-if = "1.0"
 # This supports CLAP 1.1.8
 clap-sys = {  git = "https://github.com/robbert-vdh/clap-sys.git", branch = "feature/cstr-macro" }
+clack-plugin = { path = "../rust-clap/plugin" }
+clack-extensions = { path = "../rust-clap/extensions", features = ["clack-plugin", "audio-ports", "audio-ports-config", "latency", "log", "gui", "note-ports", "params", "render", "state", "tail", "thread-check", "voice-info"] }
 crossbeam = "0.8"
 lazy_static = "1.4"
 log = { version = "0.4", features = ["std", "release_max_level_info"] }
