--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,8 @@ backtrace = "0.3.65"
 bitflags = "1.3"
 cfg-if = "1.0"
 # This supports CLAP 1.1.8
-clap-sys = {  git = "https://github.com/robbert-vdh/clap-sys.git", branch = "feature/cstr-macro" }
+clap-sys = "0.4.0"
+clap-hot-reload = { git = "https://github.com/prokopyl/clap-hot-reload" }
 crossbeam = "0.8"
 lazy_static = "1.4"
 log = { version = "0.4", features = ["std", "release_max_level_info"] }
